Fix overlapping menu an RH dropdown on mobile

--- a/src/main/resources/resources/css/keycloak.css
+++ b/src/main/resources/resources/css/keycloak.css
@@ -244,6 +244,11 @@ a:visited {
 
 }
 
+.navbar-toggle {
+    margin-top: 10px !important;
+    margin-left: 20px !important;
+}
+
 /**********************************************************************************************************
  * PAGES
  ***********************************************************************************************************/
